SkyNet example modified for tests with both classic Tascalate JavaFlow and implementation based on Project Loom Continuations